--- a/rgdsn.ipynb
+++ b/rgdsn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ed1eef71573e8330ed7851cc6650cca8101246112d84b1a483bc0236773860d9"
+  "signature": "sha256:89aae2bdf42cb931c7cbdbeb8ae513a65f8e04e438a0ba94124868c80f92d58c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -88,8 +88,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -420,6 +419,8 @@
       "    with div():\n",
       "        attr(cls='header')\n",
       "        h1('RedditGetsDrawn Recent Reference')\n",
+      "        p('updated ', strftime(\"%a, %d %b %Y %H:%M:%S +0000\", gmtime()))\n",
+      "\n",
       "    \n",
       "    \n",
       "\n",
@@ -454,6 +455,16 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "http://imgur.com/awz24iA\n",
+        "http://i.imgur.com/cxRIJph.png\n",
+        "http://i.imgur.com/wlI6P2v.jpg\n",
+        "http://imgur.com/w1S16wD\n",
+        "http://i.imgur.com/9DPWGUC.jpg\n",
+        "http://i.imgur.com/7ppZETu.jpg\n",
+        "http://imgur.com/3vBNxol\n",
+        "http://i.imgur.com/CzSvw6R.jpg\n",
+        "http://imgur.com/gallery/JO6jd8u/new\n",
+        "http://i.imgur.com/l4aKqFL.jpg\n",
         "https://i.imgur.com/C46y5F6.jpg\n",
         "http://imgur.com/a/jX9zL\n",
         "http://imgur.com/Tg3sjEZ\n",
@@ -469,16 +480,6 @@
         "http://i.imgur.com/PgwLJcf.jpg\n",
         "http://imgur.com/a/I2hRX\n",
         "http://imgur.com/aABcBXt\n",
-        "http://imgur.com/xrkoFSj\n",
-        "http://i.imgur.com/chvrPhS.jpg\n",
-        "http://imgur.com/qN2nhuC\n",
-        "http://imgur.com/J7zKt5O\n",
-        "http://imgur.com/5iqvxYI\n",
-        "http://stiffjawshaw.imgur.com/all/\n",
-        "http://i.imgur.com/4SkXfoo.jpg\n",
-        "https://i.imgur.com/BHzQUVY.jpg\n",
-        "http://imgur.com/a/yvnBz\n",
-        "http://imgur.com/xueOhyF\n",
         "<!DOCTYPE html>\n",
         "<html>\n",
         "  <head>\n",
@@ -487,11 +488,73 @@
         "    <script src=\"script.js\" type=\"text/javascript\"></script>\n",
         "    <div class=\"header\">\n",
         "      <h1>RedditGetsDrawn Recent Reference</h1>\n",
+        "      <p>updated Tue, 16 Sep 2014 11:30:31 +0000\n",
+        "      </p>\n",
         "    </div>\n",
         "  </head>\n",
         "  <body>\n",
         "    <div id=\"body\">\n",
         "      <ol>\n",
+        "        <h1>I want to see what you guys can do with my favorite pic of my son. All styles welcome.</h1>\n",
+        "        <a>http://imgur.com/awz24iA</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://imgur.com/awz24iA\">\n",
+        "        </p>\n",
+        "        <p>Legion3382</p>\n",
+        "        <h1>Could I get this picture of me drawn with the back round turned into something more serious?</h1>\n",
+        "        <a>http://i.imgur.com/cxRIJph.png</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://i.imgur.com/cxRIJph.png\">\n",
+        "        </p>\n",
+        "        <p>shadowlink_486</p>\n",
+        "        <h1>My favorite picture from Prom a couple of years ago . I would really love to see what you guys can do with it :)</h1>\n",
+        "        <a>http://i.imgur.com/wlI6P2v.jpg</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://i.imgur.com/wlI6P2v.jpg\">\n",
+        "        </p>\n",
+        "        <p>wtf_wendurs</p>\n",
+        "        <h1>Looking for a simple cartoon of my girlfriend (maybe a warm up drawing for someone?)</h1>\n",
+        "        <a>http://imgur.com/w1S16wD</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://imgur.com/w1S16wD\">\n",
+        "        </p>\n",
+        "        <p>wizard5525</p>\n",
+        "        <h1>Someone do me! However you want! (Isn't that what we're supposed to say?</h1>\n",
+        "        <a>http://i.imgur.com/9DPWGUC.jpg</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://i.imgur.com/9DPWGUC.jpg\">\n",
+        "        </p>\n",
+        "        <p>jdhenson</p>\n",
+        "        <h1>Anyone want to try drawing my stupid duck face? Just for shits and giggles of course.</h1>\n",
+        "        <a>http://i.imgur.com/7ppZETu.jpg</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://i.imgur.com/7ppZETu.jpg\">\n",
+        "        </p>\n",
+        "        <p>BlondeRed</p>\n",
+        "        <h1>I took this bland picture of my dad's reunion with his sisters, anyone up to trying to make em more interesting?</h1>\n",
+        "        <a>http://imgur.com/3vBNxol</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://imgur.com/3vBNxol\">\n",
+        "        </p>\n",
+        "        <p>TexasLaddie</p>\n",
+        "        <h1>Random picture i took when i found my kickass old glasses.</h1>\n",
+        "        <a>http://i.imgur.com/CzSvw6R.jpg</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://i.imgur.com/CzSvw6R.jpg\">\n",
+        "        </p>\n",
+        "        <p>Erokra</p>\n",
+        "        <h1>Would anyone be willing to recreate this picture of my fiance and I?</h1>\n",
+        "        <a>http://imgur.com/gallery/JO6jd8u/new</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://imgur.com/gallery/JO6jd8u/new\">\n",
+        "        </p>\n",
+        "        <p>Chloechu</p>\n",
+        "        <h1>I would love it if some of you talented bunch would draw me!</h1>\n",
+        "        <a>http://i.imgur.com/l4aKqFL.jpg</a>\n",
+        "        <p>\n",
+        "          <img src=\"http://i.imgur.com/l4aKqFL.jpg\">\n",
+        "        </p>\n",
+        "        <p>ames24601</p>\n",
         "        <h1>Would someone make a nice portrait of my dad? I want to make an 11&quot;x14&quot; print.</h1>\n",
         "        <a>https://i.imgur.com/C46y5F6.jpg</a>\n",
         "        <p>\n",
@@ -582,66 +645,6 @@
         "          <img src=\"http://imgur.com/aABcBXt\">\n",
         "        </p>\n",
         "        <p>WeGroot</p>\n",
-        "        <h1>My wife and I recently celebrated 10 years of marriage. I'd love for you to draw us!</h1>\n",
-        "        <a>http://imgur.com/xrkoFSj</a>\n",
-        "        <p>\n",
-        "          <img src=\"http://imgur.com/xrkoFSj\">\n",
-        "        </p>\n",
-        "        <p>_Tys1_</p>\n",
-        "        <h1>Can someone please draw my favorite picture with my best friend from beach week 5 years ago?</h1>\n",
-        "        <a>http://i.imgur.com/chvrPhS.jpg</a>\n",
-        "        <p>\n",
-        "          <img src=\"http://i.imgur.com/chvrPhS.jpg\">\n",
-        "        </p>\n",
-        "        <p>kyleisgibson</p>\n",
-        "        <h1>Our favorite Pre-wedding picture. Any style welcome.</h1>\n",
-        "        <a>http://imgur.com/qN2nhuC</a>\n",
-        "        <p>\n",
-        "          <img src=\"http://imgur.com/qN2nhuC\">\n",
-        "        </p>\n",
-        "        <p>necio94</p>\n",
-        "        <h1>My SO and I just rescued these little guys. Would love to see what you guys could do with them!</h1>\n",
-        "        <a>http://imgur.com/J7zKt5O</a>\n",
-        "        <p>\n",
-        "          <img src=\"http://imgur.com/J7zKt5O\">\n",
-        "        </p>\n",
-        "        <p>DontHateMasticate</p>\n",
-        "        <h1>In fact I'm a nice guy</h1>\n",
-        "        <a>http://imgur.com/5iqvxYI</a>\n",
-        "        <p>\n",
-        "          <img src=\"http://imgur.com/5iqvxYI\">\n",
-        "        </p>\n",
-        "        <p>DeastinY</p>\n",
-        "        <h1>me singing with sax!!</h1>\n",
-        "        <a>http://stiffjawshaw.imgur.com/all/</a>\n",
-        "        <p>\n",
-        "          <img src=\"http://stiffjawshaw.imgur.com/all/\">\n",
-        "        </p>\n",
-        "        <p>stiffjawshaw</p>\n",
-        "        <h1>This is one of my favorite pictures I have of my girlfriend. Can you draw it for me, Reddit? :)</h1>\n",
-        "        <a>http://i.imgur.com/4SkXfoo.jpg</a>\n",
-        "        <p>\n",
-        "          <img src=\"http://i.imgur.com/4SkXfoo.jpg\">\n",
-        "        </p>\n",
-        "        <p>Bemy_Gunshot</p>\n",
-        "        <h1>I thought I would post in the subs I usually comment in, for a change.</h1>\n",
-        "        <a>https://i.imgur.com/BHzQUVY.jpg</a>\n",
-        "        <p>\n",
-        "          <img src=\"https://i.imgur.com/BHzQUVY.jpg\">\n",
-        "        </p>\n",
-        "        <p>mmasonghi</p>\n",
-        "        <h1>I'm absolutely blown away by all the talent on here and I would LOVE to be drawn!</h1>\n",
-        "        <a>http://imgur.com/a/yvnBz</a>\n",
-        "        <p>\n",
-        "          <img src=\"http://imgur.com/a/yvnBz\">\n",
-        "        </p>\n",
-        "        <p>TheMadeline</p>\n",
-        "        <h1>Its my girlfriends birthday in a few days, could someone please draw this picture of us from our graduation ceremony</h1>\n",
-        "        <a>http://imgur.com/xueOhyF</a>\n",
-        "        <p>\n",
-        "          <img src=\"http://imgur.com/xueOhyF\">\n",
-        "        </p>\n",
-        "        <p>ak488</p>\n",
         "      </ol>\n",
         "    </div>\n",
         "    <div class=\"body\">\n",
@@ -653,7 +656,7 @@
        ]
       }
      ],
-     "prompt_number": 63
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -664,7 +667,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -675,7 +678,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -688,7 +691,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
