--- a/artcontrolme.ipynb
+++ b/artcontrolme.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0589fee798b6ff74b0501463734ba7037af61a489cd4c92a3a5896547ca76c6d"
+  "signature": "sha256:df8eff8e3bca3d8dd11abd469af5b573800dfd15c859245bc82b68877caf5bf0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,7 +39,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -50,7 +51,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -61,7 +62,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -72,7 +73,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -795,7 +796,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -804,7 +805,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -1176,7 +1177,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -1189,7 +1190,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -1203,7 +1204,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -1214,7 +1215,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -1228,7 +1229,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
@@ -1369,7 +1370,14 @@
         "{'2013-03-08 02:08:55\\n': 'color-explored-with-redditgetsdrawn-paintings\\n'}\n",
         "{'2012-04-26 12:16:53\\n': 'vincents-life-drawing-lee-thursday\\n'}\n",
         "{'2012-04-30 07:03:53\\n': 'figurative-expressions-russel\\n'}\n",
-        "{'2012-06-20 14:03:24\\n': 'basement-landscape\\n'}\n",
+        "{'2012-06-20 14:03:24\\n': 'basement-landscape\\n'}"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "{'2011-08-10 12:01:21\\n': 'just-two-colours\\n'}\n",
         "{'2012-11-19 23:35:14\\n': 'ca-skl\\n'}\n",
         "{'2012-06-05 09:19:07\\n': 'doodle-pixellovely-perspective\\n'}\n",
@@ -1392,14 +1400,7 @@
         "{'2013-11-05 10:48:32\\n': 'crush\\n'}\n",
         "{'2013-01-10 23:05:01\\n': 'weltak\\n'}\n",
         "{'2012-09-09 03:11:29\\n': 'chch-sketches-sketchbook\\n'}\n",
-        "{'2013-06-26 10:28:51\\n': 'three-figures-in-library\\n'}"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "{'2013-06-26 10:28:51\\n': 'three-figures-in-library\\n'}\n",
         "{'2012-11-23 22:57:23\\n': 'alcemy-landscape\\n'}\n",
         "{'2012-05-25 03:35:59\\n': 'path-of-exile\\n'}\n",
         "{'2013-03-04 00:30:28\\n': 'wellington-draw\\n'}\n",
@@ -1502,7 +1503,14 @@
         "{'2013-05-22 22:29:10\\n': 'anon\\n'}\n",
         "{'2012-08-20 21:08:16\\n': 'auckland-waterfont-plus-train-wait\\n'}\n",
         "{'2013-06-06 20:07:18\\n': 'vampire-weekend-paintin\\n'}\n",
-        "{'2012-04-12 08:37:03\\n': 'andrew-a6-doodles\\n'}\n",
+        "{'2012-04-12 08:37:03\\n': 'andrew-a6-doodles\\n'}"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "{'2012-11-12 02:58:56\\n': 'levin-church\\n'}\n",
         "{'2012-12-30 19:34:57\\n': 'sketchbook-travels\\n'}\n",
         "{'2012-03-20 08:29:42\\n': 'robert-tuesday-term-1-2012\\n'}\n",
@@ -1563,14 +1571,7 @@
         "{'2012-08-27 12:56:36\\n': 'vector-logo-mall\\n'}\n",
         "{'2011-08-06 20:34:12\\n': 'underpainting\\n'}\n",
         "{'2013-12-17 18:54:08\\n': '5378\\n'}\n",
-        "{'2012-02-16 12:45:16\\n': 'life-model-monday\\n'}"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "{'2012-02-16 12:45:16\\n': 'life-model-monday\\n'}\n",
         "{'2012-07-24 03:36:10\\n': 'old-paintings\\n'}\n",
         "{'2013-01-17 21:44:05\\n': 'cuban-water\\n'}\n",
         "{'2013-02-06 11:21:21\\n': 'horse\\n'}\n",
@@ -1630,7 +1631,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
@@ -1644,13 +1645,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 38,
        "text": [
         "[('2013-01-23 20:15:34\\n', 'dott\\n')]"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -1661,7 +1662,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
@@ -1672,7 +1673,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
@@ -1683,7 +1684,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
@@ -1694,7 +1695,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
@@ -2082,7 +2083,7 @@
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
@@ -2091,7 +2092,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
@@ -3520,7 +3521,7 @@
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 44
     },
     {
      "cell_type": "code",
@@ -3531,7 +3532,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 45
     },
     {
      "cell_type": "markdown",
@@ -3563,7 +3564,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 25,
+       "prompt_number": 46,
        "text": [
         "['2011-07-19 10:36:18\\n',\n",
         " '2011-07-19 10:36:18\\n',\n",
@@ -4270,7 +4271,7 @@
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 46
     },
     {
      "cell_type": "code",
@@ -4284,13 +4285,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 26,
+       "prompt_number": 47,
        "text": [
         "[]"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -4302,7 +4303,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
@@ -4324,7 +4325,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 49
     },
     {
      "cell_type": "code",
@@ -4338,13 +4339,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 29,
+       "prompt_number": 50,
        "text": [
         "351"
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 50
     },
     {
      "cell_type": "code",
@@ -4357,7 +4358,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 51
     },
     {
      "cell_type": "code",
@@ -4763,7 +4764,25 @@
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 52
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 52
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
