--- a/autobiography.ipynb
+++ b/autobiography.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:99a9b5e8d15d0f8e6bc95cf741e4da6f12611c26498c61eedc746e5d45261a14"
+  "signature": "sha256:dc2fd0bcc3b97889856073826a8ad97c21080a13e65608037be466dcf31a4877"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -36,11 +36,22 @@
       "I rembmer being ifn the art room at intermediate. I have better memories of cooking and wood work than art.\n",
       "Paint yourself said the reliever.\n",
       "\n",
-      "We had art folder. Kids would cover these black folders in art. I was always embarrassed by the art on mine. I would hide it by carrying the folder so that \n",
+      "We had art folder. Kids would cover these black folders in art. I was always embarrassed by the art on mine. I would hide it by carrying the folder so that art was facing the inside. \n",
+      "Today I walk around with a visual diary and will let anyone look. \n",
+      "I'm always very critical of my art though. \n",
+      "\n",
+      "\n",
       "I hated using artist models and copy their painting.\n",
       "My painting skills were low - needed to develop drawing and confidence.\n",
       "I am tired.\n",
-      "More bad news tonightm\n"
+      "More bad news tonight\n",
+      "\n",
+      "I had some excellent tutors that helped me develop my painting. Most notable was Gary Freemantle and Roger Key.\n",
+      "Gary pushed my abstraction and color \n",
+      "\n",
+      "Key  pushed obsovational painting and focusing on lights and darks. \n",
+      "\n",
+      "The classes I did at The Learning Connextion were "
      ]
     }
    ],
