--- a/autobiography.ipynb
+++ b/autobiography.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dc2fd0bcc3b97889856073826a8ad97c21080a13e65608037be466dcf31a4877"
+  "signature": "sha256:f73c5e1118d6630321057638f9e4fc0d5caef3245bcdbdf06b187154facffc0a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,6 +16,14 @@
       "\n",
       "Structure:\n",
       "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Hello and goodNI\u0122\n",
+      "testing one two there."
      ]
     },
     {
