--- a/pygitx.ipynb
+++ b/pygitx.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:66f4a2089cb3e61e9408405831ed2b76bcb3367a38512e724d57cfc0d98ec161"
+  "signature": "sha256:2593cc5f3fd371d64c32c12cb49ad1222c27774de9b9a947644e9d4551e94d40"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -26,7 +26,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 71
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -40,18 +40,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 72
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "g = Github('wcmckee', 'fig123now!')"
+      "g = Github('wcmckee', 'cam123now!')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 73
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -62,7 +62,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 74
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -82,7 +82,7 @@
        ]
       }
      ],
-     "prompt_number": 75
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -101,7 +101,7 @@
        ]
       }
      ],
-     "prompt_number": 76
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -112,7 +112,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 77
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -123,7 +123,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 78
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -134,7 +134,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 79
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -176,7 +176,14 @@
         "dockerfiles\n",
         "flask\n",
         "flask-ghpages-example\n",
-        "ggj14\n",
+        "ggj14"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "hackage-server\n",
         "hamiltoncomputerclub.org.nz\n",
         "haskell-learn\n",
@@ -198,8 +205,7 @@
         "molyjam2013\n",
         "niketa\n",
         "opencompetencies\n",
-        "openfaux-server\n",
-        "ouya-unity-plugin"
+        "openfaux-server"
        ]
       },
       {
@@ -207,6 +213,7 @@
        "stream": "stdout",
        "text": [
         "\n",
+        "ouya-unity-plugin\n",
         "paintingautopy\n",
         "pithos\n",
         "prodo-game\n",
@@ -251,7 +258,7 @@
        ]
       }
      ],
-     "prompt_number": 80
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -314,13 +321,7 @@
         "molyjam2013\n",
         "niketa\n",
         "opencompetencies\n",
-        "openfaux-server\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
+        "openfaux-server\n",
         "ouya-unity-plugin\n",
         "paintingautopy\n",
         "pithos\n",
@@ -345,7 +346,13 @@
         "RPIO\n",
         "selfspy\n",
         "SketchDaily-GestureDrawing\n",
-        "skins\n",
+        "skins\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
         "SortPictures\n",
         "SoundWall\n",
         "SuburbNightmare\n",
@@ -366,7 +373,7 @@
        ]
       }
      ],
-     "prompt_number": 81
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -380,7 +387,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 82,
+       "prompt_number": 13,
        "text": [
         "[u'4chan-API',\n",
         " u'adypy',\n",
@@ -475,7 +482,7 @@
        ]
       }
      ],
-     "prompt_number": 82
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -486,7 +493,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 83
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -497,7 +504,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 84
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -508,7 +515,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 85
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -519,7 +526,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 86
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -533,13 +540,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 87,
+       "prompt_number": 18,
        "text": [
         "'fig123now!\\n'"
        ]
       }
      ],
-     "prompt_number": 87
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -550,7 +557,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 88
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -561,7 +568,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 89
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -572,7 +579,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 90
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -619,7 +626,14 @@
         "niketa\n",
         "Projects\n",
         "bgj05-hungry\n",
-        "BirdCage\n",
+        "BirdCage"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "iamagamer\n",
         "ipython\n",
         "redtube\n",
@@ -640,14 +654,7 @@
         "vIPer\n",
         "Triger\n",
         "RedditPress\n",
-        "tweepy"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "tweepy\n",
         "pytm\n",
         "anim_framework\n",
         "HTML5-Tiny\n",
@@ -684,7 +691,7 @@
        ]
       }
      ],
-     "prompt_number": 91
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -698,9 +705,11 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 92,
+       "prompt_number": 23,
        "text": [
-        "{'.Xauthority',\n",
+        "{'.Mathematica',\n",
+        " '.WolframEngine',\n",
+        " '.Xauthority',\n",
         " '.bash_history',\n",
         " '.bash_logout',\n",
         " '.bashrc',\n",
@@ -734,6 +743,7 @@
         " 'artcontrolme',\n",
         " 'brobeur-blog-post',\n",
         " 'gitp.txt',\n",
+        " 'learnpython',\n",
         " 'pistore.desktop',\n",
         " 'rgdrecentReference',\n",
         " 'squeak',\n",
@@ -741,7 +751,7 @@
        ]
       }
      ],
-     "prompt_number": 92
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -752,7 +762,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 93
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -766,13 +776,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 94,
+       "prompt_number": 25,
        "text": [
         "{'BeOk', 'artcontrol-api', 'brobeur-web', 'wcmckee'}"
        ]
       }
      ],
-     "prompt_number": 94
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -798,12 +808,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-95-7bbdd6107533>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mrepoit\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrepolisx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mrepoit\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mgit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclone\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'https://github.com/wcmckee/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mrepoit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-26-7bbdd6107533>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mrepoit\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrepolisx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mrepoit\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mgit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclone\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'https://github.com/wcmckee/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mrepoit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;31mAttributeError\u001b[0m: 'module' object has no attribute 'Git'"
        ]
       }
      ],
-     "prompt_number": 95
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -813,19 +823,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "TypeError",
-       "evalue": "'module' object is not callable",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-96-fe34f7ddb807>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mwcmrepo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrepository\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'/home/wcmckee/wcmkee'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
-       ]
-      }
-     ],
-     "prompt_number": 96
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -859,7 +857,7 @@
        ]
       }
      ],
-     "prompt_number": 97
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -868,7 +866,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 97
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -879,7 +877,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 101
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -897,12 +895,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-102-497077d73790>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgit\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrepo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRepo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"/Users/mtrier/Development/git-python\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-29-497077d73790>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgit\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrepo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRepo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"/Users/mtrier/Development/git-python\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;31mNameError\u001b[0m: name 'Repo' is not defined"
        ]
       }
      ],
-     "prompt_number": 102
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -919,12 +917,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-104-66ad7af6c29e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRepository\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclone\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'https://github.com/wcmckee/BeOk'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-30-66ad7af6c29e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRepository\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclone\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'https://github.com/wcmckee/BeOk'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;31mTypeError\u001b[0m: unbound method clone() must be called with Repository instance as first argument (got str instance instead)"
        ]
       }
      ],
-     "prompt_number": 104
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -941,19 +939,37 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-105-4495727d2e19>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrepository\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRepository\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclone\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-31-4495727d2e19>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrepository\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRepository\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclone\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;31mTypeError\u001b[0m: unbound method clone() must be called with Repository instance as first argument (got nothing instead)"
        ]
       }
      ],
-     "prompt_number": 105
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "git.objects"
+      "(git.objects)"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 34,
+       "text": [
+        "<module 'git.objects' from '/usr/local/lib/python2.7/dist-packages/git/objects.pyc'>"
+       ]
+      }
+     ],
+     "prompt_number": 34
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
